# financial-tools

data-cleanup/: README.md  clean.py  cleancapitalone.py  cleanchase.py
datacleanup/: .gitignore  LICENSE.txt  README.md  myproject  project.sh  pyproject.toml
datacleanup/src/datacleanup/: __about__.py  __init__.py
datacleanup/src/datacleanup/clean/: capitalone.py  chasevisa.py  common.py
datacleanup/src/datacleanup/cli/: __main__.py  main.py
datacleanup/tests/: test_common.py
financial-importer/: .gitignore  Cargo.toml  README.md  main.rs  myproject
financial-importer/src/: app.rs  ledger_entry.rs  lib.rs  main.rs  source_record.rs
financial-importer/src/transaction_matcher/: config.rs  definitions.rs  matcher.rs  mod.rs
pricesdb-updater/: Cargo.toml  README.md
pricesdb-updater/src/: lib.rs  main.rs
