[package]
name = "financial-importer"
version = "0.1.0"
authors = ["Travis B. Hartwell <nafai@travishartwell.net>"]
edition = "2021"

[lib]
name = "financial_importer"
path = "src/lib.rs"

[[bin]]
name = "financial-importer"
path = "src/bin/main.rs"

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
color-eyre = "0.6.3"
csv = "1.3.0"
format_num = "0.1.0"
lazy_static = "1.4.0"
log = "0.4.21"
platform-dirs = "0.3.0"
pretty_env_logger = "0.5.0"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
structopt = "0.3.26"
toml = "0.8.11"
voca_rs = "1.15.2"
