[package]
name = "pricesdb-updater"
version = "0.1.0"
authors = ["Travis B. Hartwell <nafai@travishartwell.net>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "pricesdb-updater"
path = "src/main.rs"

[dependencies]
chrono = "0.4.19"
color-eyre = "0.5.11"
eyre = "0.6.5"
futures = "0.3.19"
structopt = "0.3.25"
tokio = { version = "1.15.0", features = ["full"] }
tokio-stream = "0.1.8"
yahoo_finance_api = "1.2.2"
